# pico-ILI9341_parallel_16B

./: CMakeLists.txt  defines.h  ili9341_driver.cpp  ili9341_driver.h  lcd.c
Adafruit/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt
